--- a/pc/css/style.css
+++ b/pc/css/style.css
@@ -329,4 +329,212 @@ FOUNDATIONここまで  Not touch!
   content: "";
   display: block;
   clear: both;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.ctsWrap {
+  width: 100%;
+  min-width: 1200px;
+  background-color: #fffef3;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  color: #333;
+  padding-bottom: 10px;
+  margin-bottom: -15px;
+}
+.ctsWrap img {
+  display: block;
+}
+
+.hdCts {
+  position: relative;
+  width: 1200px;
+  margin: 0 auto 80px;
+}
+.hdCts .pr {
+  position: absolute;
+  font-size: 16px;
+  color: #fff;
+  top: 5px;
+  left: 0;
+  text-shadow: 0 0 5px #000;
+}
+.hdCts > img {
+  width: 650px;
+}
+.hdCts > img.sub {
+  position: absolute;
+  bottom: -15px;
+  left: 465px;
+  width: 200px;
+  border-radius: 100px;
+  border: solid 2px #fff;
+}
+.hdCts h1 {
+  width: 780px;
+  position: absolute;
+  top: 20px;
+  right: 0;
+}
+.hdCts h1 + div {
+  width: 515px;
+  position: absolute;
+  right: 5px;
+  bottom: 30px;
+}
+.hdCts h1 + div p {
+  color: #c03475;
+  font-size: 15px;
+  line-height: 1.7;
+}
+.hdCts h1 + div p + p {
+  font-size: 13px;
+  margin-top: 1em;
+}
+
+.mainCts {
+  margin: 0 auto;
+}
+.mainCts h2 {
+  width: 700px;
+  margin: 80px auto 40px;
+}
+.mainCts h2 img {
+  width: 600px;
+}
+.mainCts > p {
+  width: 700px;
+  margin: 0 auto 1em;
+  font-size: 15px;
+  line-height: 1.7;
+  padding-left: 3em;
+  text-indent: -3em;
+}
+.mainCts > p span {
+  font-weight: 700;
+  color: #44a0ae;
+  padding-right: 1em;
+}
+.mainCts > p.cap {
+  font-size: 12px;
+  text-indent: 0;
+  padding: 0;
+}
+.mainCts > p.txt {
+  text-indent: 0;
+  padding: 0;
+}
+.mainCts .photo1 {
+  width: 700px;
+  margin: 50px auto 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.mainCts .photo1-1 {
+  width: 280px;
+  height: 300px;
+  background-color: #c03475;
+  padding: 15px 20px;
+}
+.mainCts .photo1-1 p {
+  color: #fff;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.mainCts .photo1-2 {
+  width: 420px;
+}
+.mainCts .photo2 {
+  width: 700px;
+  margin: 20px auto 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.mainCts .photo2-1, .mainCts .photo2-3 {
+  width: 210px;
+}
+.mainCts .photo2-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 280px;
+  height: 260px;
+}
+.mainCts .photo2-2 div {
+  width: 260px;
+  padding: 15px;
+  background-color: #44a0ae;
+}
+.mainCts .photo2-2 div p {
+  color: #fff;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.mainCts .photo2-2 div:first-of-type {
+  margin: 0 auto 0 0;
+}
+.mainCts .photo2-2 div:last-of-type {
+  margin: 0 0 0 auto;
+}
+.mainCts .photo3, .mainCts .photo4 {
+  width: 700px;
+  margin: 50px auto;
+}
+.mainCts .photo3 > div, .mainCts .photo4 > div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
+}
+.mainCts .photo3 > div img, .mainCts .photo4 > div img {
+  width: 350px;
+}
+.mainCts .photo3 p, .mainCts .photo4 p {
+  color: #c03475;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.mainCts .sponsor {
+  width: 820px;
+  border: solid 1px #44a0ae;
+  background-color: #fff;
+  margin: 80px auto;
+  padding: 30px 0 40px;
+}
+.mainCts .sponsor img {
+  width: 690px;
+  margin: 15px auto 30px;
+}
+.mainCts .sponsor p {
+  width: 700px;
+  margin: 0 auto;
+  font-size: 13px;
+  line-height: 1.6;
+}
+.mainCts .info {
+  margin: 70px auto;
+}
+.mainCts .info h3 {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 40px;
+  font-weight: 400;
+}
+.mainCts .info h3 + p {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 1em;
+}
+.mainCts .info p + a {
+  text-align: center;
+  font-size: 14px;
+  display: block;
+  margin-bottom: 50px;
+}
+.mainCts .info p + a:hover {
+  text-decoration: underline;
+}
