--- a/sp/css/style_sp.css
+++ b/sp/css/style_sp.css
@@ -326,4 +326,178 @@ pre {
 
 /*===============================
 FOUNDATIONここまで
-=================================*//*# sourceMappingURL=style_sp.css.map */
+=================================*/
+.ctsWrap {
+  width: 100%;
+  background-color: #fffef3;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  color: #333;
+  padding-bottom: 10px;
+  margin-bottom: -15px;
+}
+.ctsWrap img {
+  display: block;
+}
+
+.hdCts {
+  position: relative;
+}
+.hdCts .pr {
+  position: absolute;
+  font-size: 15px;
+  color: #fff;
+  top: 5px;
+  left: 0;
+}
+.hdCts > div {
+  width: 92%;
+  margin: 15px auto 0;
+}
+.hdCts > div h1 {
+  margin-bottom: 3%;
+}
+.hdCts > div h1 + p {
+  font-size: 15px;
+  line-height: 1.7;
+  margin-bottom: 1em;
+}
+.hdCts > div p + p {
+  font-size: 13px;
+  line-height: 1.6;
+  margin-bottom: 1em;
+}
+.hdCts > div > div {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+}
+.hdCts > div > div img {
+  width: 40%;
+  max-width: 200px;
+  border-radius: 999px;
+  margin-right: 15px;
+}
+.hdCts > div > div p {
+  width: calc(60% - 15px);
+  font-size: 12px;
+  line-height: 1.5;
+  color: #c03475;
+}
+
+.mainCts {
+  margin: 0 auto;
+}
+.mainCts h2 {
+  width: 92%;
+  margin: 80px auto 40px;
+}
+.mainCts > p {
+  width: 92%;
+  margin: 0 auto 1em;
+  font-size: 15px;
+  line-height: 1.7;
+  padding-left: 3em;
+  text-indent: -3em;
+}
+.mainCts > p span {
+  font-weight: 700;
+  color: #44a0ae;
+  padding-right: 1em;
+}
+.mainCts > p.cap {
+  font-size: 12px;
+  text-indent: 0;
+  padding: 0;
+}
+.mainCts > p.txt {
+  text-indent: 0;
+  padding: 0;
+}
+.mainCts .photo1 {
+  width: 92%;
+  margin: 8% auto;
+}
+.mainCts .photo1 div {
+  background-color: #c03475;
+  padding: 15px 20px;
+}
+.mainCts .photo1 div p {
+  color: #fff;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.mainCts .photo2 {
+  width: 92%;
+  margin: 8% auto;
+}
+.mainCts .photo2 > div {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 15px;
+}
+.mainCts .photo2 > div img {
+  width: 40%;
+}
+.mainCts .photo2 > div p {
+  width: 60%;
+  padding: 10px;
+  background-color: #44a0ae;
+  font-size: 13px;
+  line-height: 1.6;
+  color: #fff;
+}
+.mainCts .photo3, .mainCts .photo4 {
+  margin: 8% auto;
+}
+.mainCts .photo3 > div, .mainCts .photo4 > div {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin-bottom: 5px;
+}
+.mainCts .photo3 > div img, .mainCts .photo4 > div img {
+  width: 50%;
+}
+.mainCts .photo3 p, .mainCts .photo4 p {
+  width: 92%;
+  margin: 0 auto;
+  color: #c03475;
+  font-size: 12px;
+  line-height: 1.5;
+}
+.mainCts .sponsor {
+  width: 92%;
+  border: solid 1px #44a0ae;
+  background-color: #fff;
+  margin: 8% auto;
+  padding: 7% 4% 5%;
+}
+.mainCts .sponsor p {
+  font-size: 13px;
+  line-height: 1.6;
+  margin-top: 10px;
+}
+.mainCts .info {
+  margin: 5% auto;
+}
+.mainCts .info h3 {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 40px;
+  font-weight: 400;
+}
+.mainCts .info h3 + p {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 1em;
+}
+.mainCts .info p + a {
+  text-align: center;
+  font-size: 14px;
+  display: block;
+  margin-bottom: 50px;
+}
+.mainCts .info p + a:hover {
+  text-decoration: underline;
+}
