--- a/sp/css/style_sp.scss
+++ b/sp/css/style_sp.scss
@@ -451,6 +451,11 @@ FOUNDATIONここまで
         line-height: 1.6;
         color: #fff;
       }
+      +p{
+        font-size: 12px;
+        line-height: 1.5;
+        text-align: right;
+      }
     }
   }
   .photo3,.photo4{
