--- a/pc/css/style.scss
+++ b/pc/css/style.scss
@@ -460,6 +460,13 @@ FOUNDATIONここまで  Not touch!
     flex-wrap: wrap;
     &-1,&-3{
       width: 210px;
+      +p{
+        width: 100%;
+        text-align: right;
+        font-size: 12px;
+        line-height: 1.5;
+        margin-top: 5px;
+      }
     }
     &-2{
       display: flex;
